# django-starter

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: models.py
accounts/migrations/: 0001_initial.py
api/: v1_urls.py
core/: celery.py  urls.py
core/settings/: __init__.py  base.py  production.py  staging.py
