[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = "Starting point for Django projects with some sane defaults"
authors = ["Mohammed Mwijaa <mm.mwijaa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "2.2"
psycopg2-binary = "^2.8.6"
python-decouple = "^3.3"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
pre-commit = "^2.8.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
